[gd_scene load_steps=6 format=2]

[ext_resource path="res://sudoku.gd" type="Script" id=1]
[ext_resource path="res://sudoku/number_sheet_red.png" type="Texture" id=2]
[ext_resource path="res://sudoku/number_sheet.png" type="Texture" id=3]
[ext_resource path="res://sudoku/sudoku_grid.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "1"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "2"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "3"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "4"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "5"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "6"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 320, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "7"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 384, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "8"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 448, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "9"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 512, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "0"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 576, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 128, 0, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "13"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 192, 0, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "14"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 256, 0, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 320, 0, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "16"
16/texture = ExtResource( 2 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 384, 0, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "17"
17/texture = ExtResource( 2 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 448, 0, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "18"
18/texture = ExtResource( 2 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 512, 0, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0

[node name="Sudoku" type="Control"]
pause_mode = 2
anchor_left = 0.014
anchor_right = 0.014
margin_left = -6.92
margin_right = 762.08
margin_bottom = 576.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_bottom = 0.003
margin_left = 1.0
margin_right = 769.0
margin_bottom = 572.272
color = Color( 0.929412, 0.929412, 0.858824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sudoku_grid_image" type="Sprite" parent="ColorRect"]
position = Vector2( 288, 288 )
scale = Vector2( 0.998123, 1 )
texture = ExtResource( 4 )

[node name="grid_tiles" type="TileMap" parent="ColorRect"]
tile_set = SubResource( 1 )
format = 1

[node name="UP" type="Button" parent="ColorRect"]
margin_left = 640.0
margin_top = 448.0
margin_right = 704.0
margin_bottom = 512.0
text = "UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DOWN" type="Button" parent="ColorRect"]
anchor_top = -0.003
anchor_bottom = -0.003
margin_left = 640.0
margin_top = 513.722
margin_right = 704.0
margin_bottom = 577.722
text = "DOWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Button" parent="ColorRect"]
margin_left = 576.0
margin_top = 512.0
margin_right = 640.0
margin_bottom = 576.0
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RIGHT" type="Button" parent="ColorRect"]
margin_left = 704.0
margin_top = 512.0
margin_right = 768.0
margin_bottom = 576.0
text = "RIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="ColorRect"]
margin_left = 576.0
margin_top = 384.0
margin_right = 640.0
margin_bottom = 452.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="ColorRect"]
margin_left = 640.0
margin_top = 384.0
margin_right = 704.0
margin_bottom = 448.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="ColorRect"]
margin_left = 704.0
margin_top = 384.0
margin_right = 768.0
margin_bottom = 448.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="ColorRect"]
margin_left = 576.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 384.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="ColorRect"]
margin_left = 640.0
margin_top = 320.0
margin_right = 704.0
margin_bottom = 384.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="ColorRect"]
margin_left = 704.0
margin_top = 320.0
margin_right = 768.0
margin_bottom = 384.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="Button" parent="ColorRect"]
margin_left = 576.0
margin_top = 256.0
margin_right = 640.0
margin_bottom = 320.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="Button" parent="ColorRect"]
margin_left = 640.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 320.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="Button" parent="ColorRect"]
margin_left = 704.0
margin_top = 256.0
margin_right = 768.0
margin_bottom = 320.0
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="Button" parent="ColorRect"]
margin_left = 704.0
margin_top = 448.0
margin_right = 768.0
margin_bottom = 512.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ENTER" type="Button" parent="ColorRect"]
margin_left = 576.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 512.0
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SOLVED" type="Button" parent="ColorRect"]
margin_left = 632.0
margin_right = 768.0
margin_bottom = 48.0
text = "solved"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
modulate = Color( 0.447059, 0.203922, 0.203922, 1 )
margin_left = 576.0
margin_top = 192.0
margin_right = 712.0
margin_bottom = 230.0
text = "Chek the result: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/UP" to="." method="_on_UP_pressed"]
[connection signal="pressed" from="ColorRect/DOWN" to="." method="_on_DOWN_pressed"]
[connection signal="pressed" from="ColorRect/LEFT" to="." method="_on_LEFT_pressed"]
[connection signal="pressed" from="ColorRect/RIGHT" to="." method="_on_RIGHT_pressed"]
[connection signal="pressed" from="ColorRect/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="ColorRect/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="ColorRect/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="ColorRect/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="ColorRect/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="ColorRect/6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="ColorRect/7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="ColorRect/8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="ColorRect/9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="ColorRect/0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="ColorRect/ENTER" to="." method="_on_ENTER_pressed"]
[connection signal="pressed" from="ColorRect/SOLVED" to="." method="_on_SOLVED_pressed"]
